<resources>
    <string name="app_name">PAB</string>
    <string name="login_label">Login</string>

    <string name="title_projects">Mis Actividades</string>
    <string name="title_explore">Explorar</string>
    <string name="title_students">Estudiantes</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="title_new_project">Nueva Actividad</string>
    <string name="title_edit_project">Editar Actividad</string>
    <string name="title_project">Actividad</string>
    <string name="title_student">Estudiante</string>

    <string name="option_search">Buscar</string>
    <string name="option_profile">Mi perfil</string>
    <string name="option_about_us">Quiénes somos</string>
    <string name="option_log_out">Cerrar sesión</string>
    <string name="option_project_settings">Configuración Actividad</string>
    <string name="option_filter">Filtrar por</string>
    <string name="option_sort">Ordenar por</string>
    <string name="sort_name">Nombre</string>
    <string name="sort_legajo">Legajo</string>
    <string name="career">Carrera</string>
    <string name="sort_percentage">Porcentaje carrera</string>
    <string name="hours">Horas disponibles</string>
    <string name="filter_info">Ingeniería Informática</string>
    <string name="filter_indus">Ingeniería Industrial</string>
    <string name="filter_elec">Ingeniería Electrónica</string>
    <string name="filter_percentage">% carrera ></string>
    <string name="accept_button">Aplicar</string>

    <string name="profile_button_message">Ya se encuentra en su perfil!</string>

    <string name="search_button_message">Búsqueda no implementada!</string>
    <string name="filter_button_message">Filtro no implementado!</string>

    <string name="about_us_title">Quiénes somos</string>
    <string name="close_dialog_description">Cerrar diálogo</string>
    <string name="about_us_message">
        Programa para Alumnos Becados (PAB) es una aplicación desarrollada por iEquipo. Somos un grupo de estudiantes de la universidad ITBA
        con el fin de desarrollar aplicaciones Android aplicando el conocimiento de IS1.
    </string>

    <string name="description_pab_logo">PAB Logo</string>
    <string name="description_login_button">Botón de login</string>

    <string name="student_id">Legajo</string>
    <string name="student_profile_career_progress">Porcentaje de carrera</string>
    <string name="student_free_hours">Hs disponibles</string>
    <string name="project_required_hours">Horas semanales</string>

    <string name="empty_projects_list">Sin actividades</string>
    <string name="empty_students_list">Sin estudiantes</string>
    <string name="empty_notifications_list">Sin notificaciones</string>

    <string name="activity_title">Nombre</string>
    <string name="activity_credits">Créditos</string>
    <string name="activity_students">Estudiantes</string>
    <string name="activity_student_quantity">Cantidad</string>
    <string name="activity_description">Descripción</string>
    <string name="activity_activities">Actividades</string>
    <string name="activity_mail" >Mail</string>
    <string name="activity_schedule">Horarios</string>
    <string name="activity_professor">Profesor</string>
    <string name="activity_requirements">Condiciones mínimas</string>
    <string name="activity_delete_description">Borrar estudiante</string>
    <string name="activity_empty">Sin actividades en curso</string>
    <string name="activity_prefix">A</string>

    <string name="button_publish">Crear</string>
    <string name="button_edit">Editar</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_add_student">Solicitar para …</string>
    <string name="button_request">Solicitar</string>
    <string name="button_send">Enviar</string>
    <string name="button_accept">Aceptar</string>
    <string name="button_reject">Rechazar</string>

    <!--  ARCHIVAR ABAJO  -->
    <string name="button_store">Borrar</string>

    <string name="error_login_failed">Falló el loggeo en Google!</string>
    <string name="error_mail_not_found">Mail no registrado!</string>
    <string name="error_firebase_failed">Falló la autenticación de Firebase!</string>
    <string name="error_network">Ha ocurrido un error de conexión!</string>
    <string name="error_unexpected">Ha ocurrido un error inesperado! Código</string>

    <string name="error_project_full">Ups! Actividad llena</string>
    <string name="error_project_incomplete_entry">Por favor complete la cantidad de créditos y estudiantes de la actividad</string>

    <string name="dialog_message_delete_project">Está seguro que quiere borrar esta actividad?</string>
    <string name="dialog_message_delete_request_out">Está seguro que quiere darse de baja de esta actividad?</string>
    <string name="dialog_message_delete_student">Está seguro que quiere borrar al alumno</string>
    <string name="dialog_message_from_this_project">de este proyecto?</string>
    <string name="dialog_delete">Borrar</string>
    <string name="dialog_cancel">Cancelar</string>

    <string name="project_action_btn_request_out">Solicitar baja</string>
    <string name="project_action_btn_request_in">Solicitar alta</string>
    <string name="project_action_btn_delete">Borrar</string>
    <string name="project_action_btn_accept_request">Aceptar pedido</string>
    <string name="project_action_btn_reject_request">Rechazar pedido</string>
    <string name="project_action_btn_contact_students">Anuncio</string>
    <string name="project_action_btn_contact_teacher">Contactar</string>

    <string name="student_join_message">desea unirse a</string>
    <string name="student_quit_message">desea dejar</string>

    <string name="dialog_select_project_title">Seleccione una actividad</string>

    <string name="dialog_message_title_student">Contactar profesor</string>
    <string name="dialog_message_title_teacher">Contactar estudiantes</string>
    <string name="dialog_message_content_hint">Escriba su mensaje aquí</string>

    <string name="notification_down_title">Nueva solicitud</string>
    <string name="notification_down_message">ha solicitado darse de baja de la actividad</string>
    <string name="notification_join_title">Nueva solicitud</string>
    <string name="notification_join_message">ha solicitado darse de alta de la actividad</string>
    <string name="notification_request_title">Nueva invitación</string>
    <string name="notification_request_message">lo ha invitado a la actividad</string>
    <string name="notification_info_title">Nuevo mensaje</string>
    <string name="notification_info_message">le ha mandado un mensaje en la actividad</string>
    <string name="notification_info_accept_join">ha aceptado su solicitud para la actividad</string>
    <string name="notification_info_reject_join">ha rechazado su solicitud para la actividad</string>
    <string name="notification_info_accept_down">ha aceptado su solicitud para dar de baja la actividad</string>
    <string name="notification_info_reject_down">ha rechazado su solicitud para dar de baja la actividad</string>
    <string name="notification_info_accept_request">ha aceptado su invitación para la actividad</string>
    <string name="notification_info_reject_request">ha rechazado su invitación para la actividad</string>

    <string name="notification_info_delete_project">ha eliminado la actividad</string>
    <string name="notification_info_delete_student">lo ha eliminado de la actividad</string>

    <string name="notification_info_remove_student">ha rechazado su invitación para la actividad</string>

    <string name="notification_info_from">de</string>
    <string name="toast_request_sent">Pedido enviado!</string>
    <string name="toast_deleted_project">Actividad borrada!</string>
    <string name="toast_message_sent">Mensaje enviado!</string>
    <string name="toast_edited_project">Cambios aplicados!</string>
    <string name="toast_no_activities_message">Sin actividades válidas para alumno!</string>
    <string name="toast_activity_gone">La actividad no se encuentra disponible!</string>
    <string name="toast_student_gone">El alumno  no se encuentra disponible!</string>
    <string name="project_professor_desc" >estudiantes anotados</string>

    <string name="description">Descripción</string>
    <string name="name">Nombre</string>
    <string name="image_description_foto_itba">Foto ITBA</string>
    <string name="image_description_default_user">Imagen defecto de usuario</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
</resources>
