<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/name"
            android:textColor="@color/colorTextTitle"
            android:textSize="@dimen/text_size_title_medium"
            android:drawableStart="@drawable/ic_edit_24dp"
            android:drawablePadding="8dp"
            />

        <EditText
            android:id="@+id/new_act_title"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:inputType="text"
            android:background="@drawable/edit_text_box"
            android:hint="@string/activity_title"
            android:padding="10dp"
            android:textColor="@color/colorTextTitle"
            android:textColorHint="@color/colorEditTextHint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/description"
            android:textColor="@color/colorTextTitle"
            android:textSize="@dimen/text_size_title_medium"
            android:drawableStart="@drawable/ic_description"
            android:drawablePadding="8dp" />

        <EditText
            android:id="@+id/new_act_description"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:inputType="text"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_box"
            android:hint="@string/activity_description"
            android:padding="20dp"
            android:textColor="@color/colorEditTextContent"
            android:textColorHint="@color/colorEditTextHint" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/new_act_credits"
                style="@style/Base.Widget.MaterialComponents.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_box"
                android:hint="@string/activity_credits"
                android:padding="20dp"
                android:textColor="@color/colorEditTextContent"
                android:textColorHint="@color/colorEditTextHint" />

            <EditText
                android:id="@+id/new_act_student_cant"
                style="@style/Base.Widget.MaterialComponents.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_box"
                android:hint="@string/activity_student_quantity"
                android:padding="20dp"
                android:textColor="@color/colorEditTextContent"
                android:textColorHint="@color/colorEditTextHint" />
        </LinearLayout>



        <EditText
            android:id="@+id/new_act_schedule"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:inputType="text"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_box"
            android:hint="@string/activity_schedule"
            android:padding="20dp"
            android:textColor="@color/colorEditTextContent"
            android:textColorHint="@color/colorEditTextHint" />

        <EditText
            android:id="@+id/new_act_requirements"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:inputType="text"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_box"
            android:hint="@string/activity_requirements"
            android:padding="20dp"
            android:textColor="@color/colorEditTextContent"
            android:textColorHint="@color/colorEditTextHint" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/new_act_btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/button_cancel"
                android:textColor="@color/colorPrimaryDark"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/new_act_btn_publish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/button_publish"
                android:textColor="@color/colorPrimaryDark"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>