<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    android:layout_marginLeft="@dimen/card_spacing"
    android:layout_marginTop="@dimen/card_spacing"
    android:layout_marginRight="@dimen/card_spacing"
    app:cardBackgroundColor="@color/colorCardBackground"
    app:cardElevation="@dimen/card_elevation"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/card_spacing"
        android:layout_marginStart="@dimen/card_spacing"
        android:layout_marginEnd="@dimen/card_spacing">

        <TextView
            android:id="@+id/dialog_message_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:textColor="@color/colorCardContent"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/text_size_title_medium"/>

        <EditText
            android:id="@+id/dialog_message_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDialogText"
            android:inputType="textMultiLine"
            android:textSize="@dimen/text_size_small"
            android:layout_marginEnd="@dimen/card_spacing"
            android:maxLines="4"
            android:isScrollContainer="true"
            android:hint="@string/dialog_message_content_hint"
            android:textIsSelectable="true"
            android:focusable="true"
            android:importantForAutofill="no" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/dialog_message_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cancel"
            android:textColor="@color/colorPrimaryDark"
            android:background="@null"
            android:layout_toStartOf="@id/dialog_message_ok"/>
        <Button
            android:id="@+id/dialog_message_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_send"
            android:textColor="@color/colorPrimaryDark"
            android:background="@null"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>