<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_projects">

    <fragment
        android:id="@+id/navigation_projects"
        android:name="ar.edu.itba.inge.pab.ui.projects.ProjectsFragment"
        android:label="@string/title_projects"
        tools:layout="@layout/fragment_projects" >
        <action
            android:id="@+id/action_new_project"
            app:destination="@id/navigation_new_project"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_select_project"
            app:destination="@id/navigation_project"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_explore"
        android:name="ar.edu.itba.inge.pab.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" >
        <action
            android:id="@+id/action_select_project"
            app:destination="@id/navigation_project"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_students"
        android:name="ar.edu.itba.inge.pab.ui.students.StudentsFragment"
        android:label="@string/title_students"
        tools:layout="@layout/fragment_students" >
        <action
            android:id="@+id/action_select_student"
            app:destination="@id/navigation_student"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="ar.edu.itba.inge.pab.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_select_project"
            app:destination="@id/navigation_project"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_select_student"
            app:destination="@id/navigation_student"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_new_project"
        android:name="ar.edu.itba.inge.pab.ui.project.NewProjectFragment"
        android:label="{appbar_title}"
        tools:layout="@layout/fragment_new_project" >
        <argument
            android:name="project"
            app:argType="ar.edu.itba.inge.pab.elements.Project" />
        <argument
            android:name="appbar_title"
            app:argType="string" />
        <action
            android:id="@+id/action_finish_edit_project"
            app:destination="@id/navigation_projects"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_project"
        android:name="ar.edu.itba.inge.pab.ui.project.ProjectFragment"
        android:label="{appbar_title}"
        tools:layout="@layout/fragment_project" >
        <argument
            android:name="project"
            app:argType="ar.edu.itba.inge.pab.elements.Project"
            app:nullable="true" />
        <argument
            android:name="calling_fragment"
            app:argType="string" />
        <argument
            android:name="notification_id"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="appbar_title"
            app:argType="string" />
        <action
            android:id="@+id/action_edit_project"
            app:destination="@id/navigation_new_project"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_student"
        android:name="ar.edu.itba.inge.pab.ui.student.StudentFragment"
        android:label="{appbar_title}"
        tools:layout="@layout/fragment_student" >
        <argument
            android:name="student"
            app:argType="ar.edu.itba.inge.pab.elements.Student"
            app:nullable="true" />
        <argument
            android:name="project_id"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="notification"
            app:argType="ar.edu.itba.inge.pab.elements.Notification"
            app:nullable="true" />
        <argument
            android:name="appbar_title"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="ar.edu.itba.inge.pab.ui.profile.ProfileFragment"
        android:label="@string/option_profile"
        tools:layout="@layout/fragment_student" />

    <action
        android:id="@+id/action_open_profile"
        app:destination="@id/navigation_profile"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim" />
</navigation>